--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="row justify-content-md-center">
           <div class="mbr-figure pt-5">
-                <img src="assets/images/grafichefm-logo2019-1368x643.png" alt="Mobirise" title="" style="width: 45%;">
+                <img src="assets/images/grafichefm-logo2019-1368x643.png" alt="Mobirise" title="" style="width: 35%;">
             </div>  
           <div class="media-content col-md-10">
                 <h1 class="mbr-section-title align-center mbr-white pb-3 mbr-bold mbr-fonts-style display-1">
@@ -41,7 +41,7 @@
                     <p class="mbr-text mbr-fonts-style display-5">
                         Tipografia - Stampa Offset</p>
                 </div>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://mobirise.co">DOWNLOAD</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="https://mobirise.co">SCARICA CONTATTO</a>
                 </div>
             </div>
             </div>
