--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <span class="px-2 socicon-instagram socicon mbr-iconfont mbr-iconfont-social"></span>
                     </a>
                 </div>
-              <div class="col-12 col-md-8">
+              <div class="download pl-0 mb-0">
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary-outline display-4" href="GraficheFM.vcf">DOWNLOAD</a></div>
             </div>
             </div>
