--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               
           
                 <div class="social-list pl-0 mb-0">
-                    <a href="https://www.facebook.com/grafichefmsolution/1972391279547902" target="_blank">
+                    <a href="https://www.facebook.com/grafichefmsolution" target="_blank">
                         <span class="px-2 socicon-facebook socicon mbr-iconfont mbr-iconfont-social"></span>
                     </a>
                     <a href="https://instagram.com/grafichefmsolution" target="_blank">
